C/commonground-gateway-frontend-MoCftAwEx/commonground-gateway-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-commonground-gateway-frontend
  labels:
    helm.sh/chart: commonground-gateway-frontend-0.1.0
    app.kubernetes.io/name: commonground-gateway-frontend-pwa
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: commonground-gateway-frontend
    app.kubernetes.io/version: 0.1.0
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: commonground-gateway-frontend-pwa
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: commonground-gateway-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-commonground-gateway-frontend
  labels:
    helm.sh/chart: commonground-gateway-frontend-0.1.0
    app.kubernetes.io/name: commonground-gateway-frontend-pwa
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: commonground-gateway-frontend
    app.kubernetes.io/version: 0.1.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: null
  selector:
    matchLabels:
      app.kubernetes.io/name: commonground-gateway-frontend-pwa
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: commonground-gateway-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: commonground-gateway-frontend-pwa
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/part-of: commonground-gateway-frontend
    spec:
      securityContext: {}
      volumes:
        - name: env
          configMap:
            name: release-name-commonground-gateway-frontend
            items:
              - key: properties
                path: env.js
      containers:
        - name: commonground-gateway-frontend-pwa
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
          image: ghcr.io/conductionnl/commonground-gateway-frontend:dev
          imagePullPolicy: Always
          volumeMounts:
            - name: env
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-commonground-gateway-frontend
  labels:
    helm.sh/chart: commonground-gateway-frontend-0.1.0
    app.kubernetes.io/name: commonground-gateway-frontend
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: commonground-gateway-frontend
    app.kubernetes.io/version: 0.1.0
    app.kubernetes.io/managed-by: Helm
  annotations: null
spec:
  ingressClassName: nginx
  rules:
    - host: admin-bisc-dev.commonground.nu
      http:
        paths:
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-commonground-gateway
                port:
                  number: 80
          - path: /digid
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-commonground-gateway
                port:
                  number: 80
          - path: /saml
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-commonground-gateway
                port:
                  number: 80
          - path: /login
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-commonground-gateway
                port:
                  number: 80
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-commonground-gateway-frontend
                port:
                  number: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: release-name-commonground-gateway-frontend-test-connection
  labels:
    helm.sh/chart: commonground-gateway-frontend-0.1.0
    app.kubernetes.io/name: commonground-gateway-frontend
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: commonground-gateway-frontend
    app.kubernetes.io/version: 0.1.0
    app.kubernetes.io/managed-by: Helm
  annotations:
    helm.sh/hook: test
spec:
  containers:
    - name: wget
      image: busybox
      command:
        - wget
      args:
        - release-name-commonground-gateway-frontend:80
  restartPolicy: Never
